# AOC-2023

./: .gitignore  pyproject.toml
aoc2023/: day_1.py  day_2.py  load.py
attic/: day_1.py
notebook/: day_1.ipynb
