[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Jonathan Crum <jcrum@theobogroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
